# infrastructure

./: .gitignore  README.md  goals.txt  typecheck.sh  yaml2dhall.py
ci/: justfile  nginx.conf
ci/scripts/: run_playbooks.sh  setup_vm.sh  test_dev_inventory.sh
deploy/: Justfile  README.md  pyproject.toml
deploy/src/icos_deploy/: cli.py
deploy/tests/: __init__.py
devops/: .gitignore  README.md  all.yml  amalthea.yml  ansible.cfg  app-fairdatapoint.yml  bbservers.yml  callisto.yml  cdb.yml  cities.yml  core.yml  core_restore.yml  cpauth.yml  cpdata.yml  cpmeta.yml  ctehires.yml  deploy.py  docker.yml  doi.yml  domains.yml  drupal.yml  eddyetc.yml  erddap.yml  exploredata.yml  flexextract.yml  flexpart.yml  fsicos3.yml  fsicos4-stiltcluster.yml  ganymede.yml  geoip.yml  get_onlyoffice_container_id.yml  icos-kronos-kvm.yml  icos1.yml  icosdata.yml  icosprod.yml  jupyter.yml  justfile  keycloak.yml  lxd.yml  mail-mailman.yml  (+92 more)
devops-dhall/: all.dhall  app-fairdatapoint.dhall  bbservers.dhall  core.dhall  core_restore.dhall  cpauth.dhall  cpdata.dhall  cpmeta.dhall  domains.dhall  drupal.dhall  geoip.dhall  icosdata.dhall  keycloak.dhall  lxd.dhall  mail-mailman.dhall  mail-postfix.dhall  mail-rspamd.dhall  maps.dhall  matomo.dhall  nebula.dhall  nextcloud.dhall  nextcloud_sftp.dhall  nexus.dhall  plausible.dhall  prom-nextcloud.dhall  prom-victoriametrics.dhall  prom-vmagent.dhall  render.sh  requirements.dhall  restheart.dhall  server-all.dhall  server-cdb.dhall  server-fsicos2.dhall  server-fsicos3.dhall  server-fsicos4.dhall  server-icos1.dhall  sitesaquanetform.dhall  static.dhall  stiltcluster.dhall  stiltweb.dhall  (+28 more)
devops-dhall/cities.inventory/: core.dhall
devops-dhall/dev.inventory/: core.dhall
devops-dhall/fixes/: downtime-move-cpmeta.dhall  remove-files-from-directory.dhall  rename-lxd.dhall  user_cleanup.dhall
devops-dhall/host_vars/: cdb.dhall  cupcake.dhall  fsicos2.dhall  fsicos3.dhall  icos1.dhall  pancake.dhall  skuggfaxe.dhall
devops-dhall/production.inventory/: borgbackup.dhall  core.dhall  hosts.dhall  nebula.dhall  prometheus.dhall  rdflog.dhall  stilt.dhall
devops-dhall/staging.inventory/: core.dhall
devops-dhall/test-fs4.inventory/: core.dhall
devops-dhall/types/: Task.dhall
devops-ts/: BUGS.md  README.md  ROLES_PLAN.md  check-braces.ts  codemod-contexts.ts  codemod-quote.ts  codemod-structured.ts  deno.json  gen-bindings.ts  gen-contexts.ts  gen-data.ts  render-all.ts  render.ts  vendor-assets.ts  verify.sh  verify.ts
devops-ts/lib/: allvars.ts  ansible.ts  binding_test.ts  builtins.ts  concat_test.ts  context.ts  data.ts  filters_test.ts  globals.ts  hosts.ts  iff_test.ts  jinja-parse.ts  jinjafor_test.ts  lookup_test.ts  loop.ts  loop_test.ts  modules.ts  paramvars.ts  register.ts  register_test.ts  role-coverage.ts  roles.ts  shapes.ts  sharedvars.ts  template.ts  test-v.ts  units.ts  vars.ts  vaultvars.ts  when_test.ts
devops-ts/playbooks/: all.ts  app-fairdatapoint.ts  bbservers.ts  core.ts  core_restore.ts  cpauth.ts  cpdata.ts  cpmeta.ts  domains.ts  drupal.ts  geoip.ts  icosdata.ts  keycloak.ts  lxd.ts  mail-mailman.ts  mail-postfix.ts  mail-rspamd.ts  maps.ts  matomo.ts  nebula.ts  nextcloud.ts  nextcloud_sftp.ts  nexus.ts  plausible.ts  prom-nextcloud.ts  prom-victoriametrics.ts  prom-vmagent.ts  requirements.ts  restheart.ts  server-all.ts  server-cdb.ts  server-fsicos2.ts  server-fsicos3.ts  server-fsicos4.ts  server-icos1.ts  sitesaquanetform.ts  static.ts  stiltcluster.ts  stiltweb.ts  telegraf.ts  (+27 more)
devops/cities-staging.inventory/: core.yml
devops/cities.inventory/: core.yml  hosts.yml
devops/dev.inventory/: core.yml
devops/files/: erddap.conf  flexextract.conf  icos_fact.py  jupyter.conf  node-exporter-nginx.conf  vmagent-nginx.conf  wordpress-canonical.conf  wordpress.conf
devops/filter_plugins/: filters.py
devops/fixes/: downtime-move-cpmeta.yml  remove-files-from-directory.yml  rename-lxd.yml  user_cleanup.yml
devops/host_vars/: cdb.nateko.lu.se.yml  cdb.yml  cupcake.yml  dokku.yml  fsicos2.lunarc.lu.se.yml  fsicos2.yml  fsicos3.lunarc.lu.se.yml  fsicos3.yml  fsicos4.yml  icos1.gis.lu.se  icos1.gis.lu.se.yml  icos1.yml  pancake.yml  skuggfaxe.yml
devops/lookup_plugins/: hosts.py
devops/otc-meta.inventory/: core.yml
devops/production.inventory/: borgbackup.yml  core.yml  hosts  hosts.yml  nats.yml  nebula.yml  prometheus.yml  rdflog.yml  stilt.yml  wg-fsicos2.yml  wg-icos1.yml
devops/prometheus/: README.html  README.md  nginx.yml  prom2.yml  victoriametrics.yml  vmagent.yml
devops/roles/icos.nextcloud/files/nextcloud_util/: nextcloud.py  pyproject.toml
devops/roles/icos.postgresql/files/icos-postgresql-util/: README.md  icos_postgresql_util.py  pyproject.toml
devops/roles/icos.pve_server/files/icos-auto-dnat/: .gitignore  .rsync-filter  icos_auto_dnat.py  justfile  pyproject.toml  tests.py
devops/roles/icos.stiltweb/files/stilt-utils/: .rsync-filter  justfile  mutagen.yml  pyproject.toml  tests.py
devops/roles/icos.stiltweb/files/stilt-utils/stilt_utils/: common.py  find_missing_csv_files.py  sync_csv_files.py  sync_stilt_to_stiltweb.py  sync_stiltweb_to_stilt.py
devops/servers/: bbserver.yml  fsicos2.yml  fsicos3.yml  icos1-cities.yml  icos1.yml
devops/staging.inventory/: core.yml  hosts.yml  secret.yml
devops/templates/: dokku-nginx.conf
devops/test-fs4.inventory/: core.yml  secret.yml
docs/sample-ansible-docker-service/: myservice.yml
exploredata/build.notebook/: Dockerfile
local_dev/: .gitignore  README.md  dev_passwords.yml  justfile
local_dev/example_configs/: data_application.conf  meta_application.conf
local_dev/nginx/: hosts  make_certs.sh  nginx.conf
local_dev/useful_scripts/: check_backups.sh
local_dev/vm_scripts/: setup.sh
sbt/: .gitignore
sbt/icoscp-sbt-codegen/: build.sbt
sbt/icoscp-sbt-deploy/: README.md  build.sbt
sbt/icoscp-sbt-frontend/: build.sbt
sbt/icoscp-sbt-tsgen/: build.sbt
stilt/: README.md  build.sh  justfile
stilt/base/: Dockerfile  Makefile  example.docker-compose.yml
stilt/custom/: Dockerfile
(+2158 files in other folders)
