[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextcloud"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "click",
  "pyyaml"
]

[project.scripts]
nextcloud = 'nextcloud:cli'
# make this utility easier to find using tab-completion in shell
icos-nextcloud = 'nextcloud:cli'
