[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icos_postgresql_util"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
icos-postgresql = 'icos_postgresql_util:cli'

# RUFF
[tool.ruff]
target-version = "py311"
line-length = 80
select = [
  "A",   # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C",
  "DTZ", # flake8-datetimez
  "E",   # pycodestyle
  "EM",  # flake8-errmsg
  "F",   # pyflakes
  "FBT", # flake8-boolean-trap
  "I",   # isort
  "ICN", # flake8-import-conventions
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",   # flake8-quotes
  "RUF", # Ruff-specific rules
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # tabs and spaces
  # "E101",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]
