[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stilt_utils"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "click",
]

[project.scripts]
stilt-sync-csv-files = 'stilt_utils.sync_csv_files:cli'
stilt-sync-stilt-to-stiltweb = 'stilt_utils.sync_stilt_to_stiltweb:cli'
stilt-sync-stiltweb-to-stilt = 'stilt_utils.sync_stiltweb_to_stilt:cli'
stilt-find-missing-csv-files = 'stilt_utils.find_missing_csv_files:cli'

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-click",
  "ruff>=0.2.0",
]


[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
testpaths = ["tests.py", "stilt_utils"]


[tool.ruff.lint]
select = [
    # pycodestyle, pyflakes, pyupgrade, flake8-bugbear, flake8-simplify, isort
    "E", "F", "UP", "B", "SIM", "I",
]
